--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "zustand": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
