--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "owed",
-  "version": "0.2.0",
+  "version": "2.0.0",
+  "homepage": "https://coltonzp.github.io/loaned/",
   "private": true,
   "dependencies": {
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "gh-pages": "^3.1.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -17,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
