--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "owed",
-  "version": "0.2.0",
+  "version": "2.0.0",
+  "homepage": "https://coltonzp.github.io/owed/",
   "private": true,
   "dependencies": {
     "@types/node": "^14.14.20",
@@ -17,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
